# majlis_contact_center_v1

./: .gitignore  BACKEND_ARCHITECTURE.md  CONVERSATION_LOADING_FIX.md  DEMO_QUICK_START.md  DEPLOYMENT_GUIDE.md  LINEAR_IMPLEMENTATION_SUMMARY.md  LINEAR_SETUP_README.md  VERCEL_DEPLOYMENT_CHECKLIST.md  WHATSAPP_SETUP_GUIDE.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  vercel.json
app/login/: page.tsx
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/banking_agent/: nodes.py
backend/app/core/: config.py
backend/app/infra/: mcp_supabase.py  supabase_client.py
backend/app/routes/: chat.py  health.py  utils.py
backend/app/scripts/: mcp_list_tables.py
components/: back-office-module.tsx  chat-agent-desktop.tsx  chat-inbox.tsx  theme-toggle.tsx
components/back-office/: admin-dashboard.tsx  agent-back-office.tsx  back-office-dashboard.tsx  supervisor-dashboard.tsx
components/inbox/: conversation-drawer.tsx  conversation-list.tsx  conversation-panel.tsx  handover-modal.tsx
components/layout/: app-header.tsx  app-sidebar.tsx
components/ui/: message-chart.tsx  (+1 more)
contexts/: auth-context.tsx
docs/: DEMO_READINESS.md  LINEAR_QUICK_START.md  LINEAR_SETUP_GUIDE.md  TEAM_ROLES_AND_RESPONSIBILITIES.md  VERCEL_DEPLOYMENT.md  chat-mock-data-details.md  linear-labels-config.json  linear-projects-config.json  linear-views-config.json
lib/: banking-store.ts  chat-queries.ts  conversation-handling.ts  permissions.ts  supabase-server.ts  supabase-store.ts  types.ts
scripts/: migrate-to-supabase.md
(+42 files in other folders)
